; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_create_or_replace.c_GenerateBackupNameForCollision.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_worker_create_or_replace.c_GenerateBackupNameForCollision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [51 x i8] c"unsupported object to construct a rename statement\00", align 1
@.str.1 = private unnamed_addr constant [50 x i8] c"unable to generate a backup name for the old type\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @GenerateBackupNameForCollision to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @GenerateBackupNameForCollision(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @getObjectClass(i32* %4)
  switch i32 %5, label %12 [
    i32 129, label %6
    i32 128, label %9
  ]

6:                                                ; preds = %1
  %7 = load i32*, i32** %3, align 8
  %8 = call i8* @GenerateBackupNameForProcCollision(i32* %7)
  store i8* %8, i8** %2, align 8
  br label %17

9:                                                ; preds = %1
  %10 = load i32*, i32** %3, align 8
  %11 = call i8* @GenerateBackupNameForTypeCollision(i32* %10)
  store i8* %11, i8** %2, align 8
  br label %17

12:                                               ; preds = %1
  %13 = load i32, i32* @ERROR, align 4
  %14 = call i32 @errmsg(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 @errdetail(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str.1, i64 0, i64 0))
  %16 = call i32 @ereport(i32 %13, i32 %15)
  br label %17

17:                                               ; preds = %6, %9, %12
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i32 @getObjectClass(i32*) #1

declare dso_local i8* @GenerateBackupNameForProcCollision(i32*) #1

declare dso_local i8* @GenerateBackupNameForTypeCollision(i32*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @errdetail(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
